--- a/index.html
+++ b/index.html
@@ -8,11 +8,42 @@
     <title>Pexels Photos</title>
   </head>
   <body>
+    <div class="page">
+      <div class="content">
 
 
+    <h1>Pexels Photos</h1>
+
+    <div class="search">
+      <form class="topicForm">
+        <label>Search by topic</label>
+        <input id="topicInput" type="text"></input><br/>
+        <input id="topicSubmit" type="submit" value="Submit"></input>
+      </form>
+
+      <form class="colorForm">
+        <label>Search by color (word or hexadecimal)</label>
+        <input id="colorInput" type="text"></input><br/>
+        <input id="colorSubmit" type="submit" value="Submit"></input>
+      </form>
+
+      <form class="curatedForm">
+        <label>See curated photos</label>
+        <input id="curatedSubmit" type="submit" value="Submit"></input>
+      </form>
+    </div>
+
+
+
+    <div id="results"></div>
+
+    </div>
     <div class="footer">
-      <a href='https://github.com/BYU-CS-260-Winter-2021/lab-2-weather-app-coribushman'>Github</a>
+      <a href='https://github.com/BYU-CS-260-Winter-2021/lab-2-weather-app-coribushman'>FIX THIS</a>
     </div>
     <script text="type/javascript" src="/script.js"></script>
+
+
+    </div>
   </body>
 </html>
