--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="page">
       <div class="content">
 
+    <div class="top">
+
 
     <h1>Pexels Photos</h1>
 
@@ -32,6 +34,7 @@
         <input id="curatedSubmit" type="submit" value="Submit"></input>
       </form>
     </div>
+    </div>
 
 
 
@@ -39,7 +42,7 @@
 
     </div>
     <div class="footer">
-      <a href='https://github.com/BYU-CS-260-Winter-2021/lab-2-weather-app-coribushman'>FIX THIS</a>
+      <a href='https://github.com/coribushman/pexels_photos'>Github</a>
     </div>
     <script text="type/javascript" src="/script.js"></script>
 
